--- a/Pipfile
+++ b/Pipfile
@@ -47,6 +47,8 @@ Werkzeug = "==1.0.1"
 Sphinx = "==3.5.1"
 django-ckeditor = "*"
 django-autocomplete-light = "*"
+django-filter = "*"
+django-uuslug = "*"
 
 [dev-packages]
 
