--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ DJANGO_READ_DOT_ENV_FILE=True
 CELERY_BROKER_URL=redis://localhost:6379/0
 USE_DOCKER=1
 DATABASE_URL="sqlite:///hm_db.sqlite"
+DJANGO_DEBUG=True
